<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDescricaoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/descricao" />

        <TextView
            android:id="@+id/textDataLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:text="@string/data" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCategoriaLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/categoria" />

        <TextView
            android:id="@+id/textValorLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:text="@string/Rs"
            android:textColor="@color/cor_verde" />
    </LinearLayout>
</LinearLayout>